--- a/templates/base/alerts.html
+++ b/templates/base/alerts.html
@@ -1,5 +1,5 @@
 {% if messages %}
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
+<div class="alert alert-warning alert-dismissible fade show container mt-3 mb-3 w-75" style="border-radius: 25px;" role="alert">
     {% for message in messages %}
     <strong>{{ message }}</strong>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
