--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,27 +1,29 @@
 <div class="container mt-2">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="{% url 'core:index' %}">Incident Manager</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  {% if request.user.is_authenticated %}{{request.user.username|title}}{% else %}User{% endif %}
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  {% if request.user.is_authenticated %}
+                  <li><a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a></li>
+                  {% else %}
+                  <li><a class="dropdown-item" href="{% url 'accounts:register' %}">Register</a></li>
+                  <li><a class="dropdown-item" href="{% url 'accounts:login' %}">Login</a></li>
+                  {% endif %}
                 </ul>
               </li>
               <li class="nav-item">
