feat: create, view and update profile feature     - create profile form     - add a view logic for viewing and updating profile     - add profile urls     - create profile template     - remove null and blank attribute in image field of profile     - add babel package for phonenumbers prefix select

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -20,6 +20,7 @@
                 <ul class="dropdown-menu">
                   {% if request.user.is_authenticated %}
                   <li><a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a></li>
+                  <li><a class="dropdown-item" href="{% url 'accounts:profile' %}">My Profile</a></li>
                   {% else %}
                   <li><a class="dropdown-item" href="{% url 'accounts:register' %}">Register</a></li>
                   <li><a class="dropdown-item" href="{% url 'accounts:login' %}">Login</a></li>
