--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -12,6 +12,13 @@ html, body {
 
 .container-mine {
     background-color: rgb(218, 218, 218);
-    margin-top: 20px;
+    margin:20px auto 20px auto;
     padding: 20px;
+    width: fit-content;
+}
+
+
+a {
+    text-decoration: none;
+    color: black;
 }
