feat: add assign incident to team function     - change incident detail from class based Detail View to Generic View     - create form to assign incident to a team only     - create modal to assign

--- a/templates/manage/incidents/detail_incident.html
+++ b/templates/manage/incidents/detail_incident.html
@@ -16,11 +16,37 @@
                 <p><strong>Updated At: </strong>{{incident.updated_at|timesince}} ago</p>
             </div>
             <div class="col-6 col-md-6">
-                <p><strong>Assigned To: {{incident.assigned_to}}</strong></p>
+                <p><strong>Assigned To: {{incident.assigned_to}} 
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Assign
+                </button>
+                </strong></p>
                 <p><strong>Triggered: {{incident.triggered}}</strong></p>
                 <p><strong>Acknowledged: {{incident.acknowledged}}</strong></p>
                 <p><strong>Resolved: {{incident.resolved}}</strong></p>
             </div>
+                        <!-- Button trigger modal -->
+            
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Assign this incident to</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form method = "post">
+                            {% csrf_token %}
+                            {{assign_incident_form|crispy}}
+                            <input type="submit" value="Assign to" class="btn btn-outline-primary">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </form>
+                    </div>
+                </div>
+                </div>
+            </div>
+  
         </div>
         
     </div>
