--- a/templates/manage/teams/team_detail.html
+++ b/templates/manage/teams/team_detail.html
@@ -15,7 +15,7 @@
                 <h2>Team Members</h2>
                 <ul>
                     {% for member in team.members.all %}
-                        <li>@{{member.profile.user.username}}</li>
+                        <li><a href="{{member.profile.get_absolute_url}}">@{{member.profile.user.username}}</a></li>
                     {% endfor %}
                 </ul>
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
